--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -4,7 +4,7 @@
   }
 
   .Home>.RowContainer>.Illustration {
-    width: 90% !important;
+    width: 380px !important;
   }
 
   .Home>.RowContainer>.ColumnContainer {
@@ -28,6 +28,12 @@
 
   .Home>.RowContainer>.ColumnContainer>.LinkParagraph {
     font: var(--x-small-regular-font) !important;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .Home>.RowContainer>.Illustration {
+    width: 90% !important;
   }
 }
 
